<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="pref_game_bar"
        android:title="@string/game_bar_title"
        android:summary="@string/game_bar_summary">
        <intent android:targetPackage="com.xiaomi.settings"
                android:targetClass="com.xiaomi.settings.gamebar.GameBarSettingsActivity" />
    </Preference>

    <Preference
        android:key="pref_touch_sampling"
        android:title="@string/htsr_enable_title"
        android:summary="@string/htsr_enable_summary">
        <intent android:targetPackage="com.xiaomi.settings"
                android:targetClass="com.xiaomi.settings.touchsampling.TouchSamplingSettingsActivity" />
    </Preference>

    <Preference
        android:key="pref_core_control"
        android:title="@string/core_control_title"
        android:summary="@string/core_control_summary">
        <intent android:targetPackage="com.xiaomi.settings"
                android:targetClass="com.xiaomi.settings.corecontrol.CoreControlActivity" />
    </Preference>

</PreferenceScreen>
